# client-sdk

./: .gitignore  README.md  composer.json
.github/workflows/: deploy-docs.yml  publish-python.yml
curl/: README.md
docs/: index.html
go/: README.md  buckets.go  domains.go  go.mod  http.go  inbox.go  mailboxes.go  media.go  send.go  sentroy.go  storage.go  templates.go  types.go
php/: README.md  composer.json
php/src/: Buckets.php  Domains.php  HttpClient.php  Inbox.php  Mailboxes.php  Media.php  Send.php  Sentroy.php  SentroyException.php  Storage.php  Templates.php
python/: README.md  pyproject.toml
python/sentroy/: __init__.py  _http.py  buckets.py  domains.py  inbox.py  mailboxes.py  media.py  send.py  storage.py  templates.py  types.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript-react/: package-lock.json  package.json  tsconfig.json
typescript-react/src/: MediaManager.tsx
typescript-react/src/lib/: Lightbox.tsx  use-media-list.ts  utils.ts
typescript/src/: http.ts  index.ts  thumbnails.ts  types.ts
typescript/src/react/: MediaManager.tsx  MediaManagerTrigger.tsx  index.ts
typescript/src/react/crop/: CropDialog.tsx  index.ts
typescript/src/react/lib/: Lightbox.tsx  UploadQueuePanel.tsx  use-media-list.ts  use-upload-queue.ts  utils.ts
typescript/src/resources/: audience.ts  buckets.ts  domains.ts  inbox.ts  logs.ts  mailboxes.ts  media.ts  send.ts  storage.ts  suppressions.ts  templates.ts  webhooks.ts
