[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentroy-client-sdk"
version = "0.1.0"
description = "Server-side Python SDK for Sentroy platform API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["sentroy", "email", "sdk", "api", "mail"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Sentroy-Co/client-sdk"
Repository = "https://github.com/Sentroy-Co/client-sdk"
Issues = "https://github.com/Sentroy-Co/client-sdk/issues"
